@@ -47,8 +47,6 @@ ClusterTraverser::ClusterTraverser(
 }
 
 void ClusterTraverser::setStartVertex(std::string const& vid) {
-  _verticesToFetch.clear();
-  _startIdBuilder->clear();
   _startIdBuilder->add(VPackValue(vid));
   VPackSlice idSlice = _startIdBuilder->slice();
 
@@ -64,12 +62,12 @@ void ClusterTraverser::setStartVertex(std::string const& vid) {
     }
   }
 
-  if (!vertexMatchesConditions(StringRef(vid), 0)) {
+  StringRef persId = traverserCache()->persistString(StringRef(vid));
+  if (!vertexMatchesConditions(persId, 0)) {
     // Start vertex invalid
     _done = true;
     return;
   }
-  StringRef persId = traverserCache()->persistString(StringRef(vid));
 
   _vertexGetter->reset(persId);
   if (_opts->useBreadthFirst) {
@@ -78,6 +76,14 @@ void ClusterTraverser::setStartVertex(std::string const& vid) {
     _enumerator.reset(new arangodb::traverser::DepthFirstEnumerator(this, vid, _opts));
   }
   _done = false;
+}
+
+void ClusterTraverser::clear() {
+  _startIdBuilder->clear();
+  traverserCache()->clear();
+
+  _vertices.clear();
+  _verticesToFetch.clear();
 }
 
 bool ClusterTraverser::getVertex(VPackSlice edge, std::vector<StringRef>& result) {
@@ -109,8 +115,8 @@ void ClusterTraverser::fetchVertices() {
   auto ch = static_cast<ClusterTraverserCache*>(traverserCache());
   ch->insertedDocuments() += _verticesToFetch.size();
   transaction::BuilderLeaser lease(_trx);
-  fetchVerticesFromEngines(_dbname, _engines, _verticesToFetch, _vertices,
-                           *(lease.get()));
+  fetchVerticesFromEngines(_dbname, _engines, _verticesToFetch, _vertices, ch->datalake(),
+                           *(lease.get()), false);
   _verticesToFetch.clear();
 }
 
@@ -125,7 +131,8 @@ aql::AqlValue ClusterTraverser::fetchVertexData(StringRef idString) {
   }
   // Now all vertices are cached!!
   TRI_ASSERT(cached != _vertices.end());
-  return aql::AqlValue((*cached).second->data());
+  uint8_t const* ptr = cached->second.begin();
+  return aql::AqlValue(ptr); // no copy constructor
 }
 
 //////////////////////////////////////////////////////////////////////////////
@@ -142,5 +149,5 @@ void ClusterTraverser::addVertexToVelocyPack(StringRef vid, VPackBuilder& result
   }
   // Now all vertices are cached!!
   TRI_ASSERT(cached != _vertices.end());
-  result.add(VPackSlice((*cached).second->data()));
+  result.add(cached->second);
 }
