@@ -52,6 +52,7 @@ class ClusterTraverser final : public Traverser {
   ~ClusterTraverser() {}
 
   void setStartVertex(std::string const& id) override;
+  void clear() override;
 
  protected:
   /// @brief Function to load the other sides vertex of an edge
@@ -80,7 +81,7 @@ class ClusterTraverser final : public Traverser {
  private:
   void fetchVertices();
 
-  std::unordered_map<StringRef, std::shared_ptr<arangodb::velocypack::Buffer<uint8_t>>> _vertices;
+  std::unordered_map<StringRef, VPackSlice> _vertices;
 
   std::string _dbname;
 
