@@ -53,6 +53,12 @@ TraverserCache::TraverserCache(aql::Query* query)
 
 TraverserCache::~TraverserCache() {}
 
+void TraverserCache::clear() {
+  _stringHeap->clear();
+  _persistedStrings.clear();
+  _mmdr->clear();
+}
+
 VPackSlice TraverserCache::lookupToken(EdgeDocumentToken const& idToken) {
   TRI_ASSERT(!ServerState::instance()->isCoordinator());
   auto col = _trx->vocbase().lookupCollection(idToken.cid());
