@@ -1,6 +1,8 @@
 v3.4.9 (XXXX-XX-XX)
 -------------------
 
+* Now clearing an internal map inside the traverser engine correctly.
+
 * Fix Windows client package JS installation paths.
 
 * Updated arangosync to 0.7.2.
